--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "cSpell.words": [
+        "Atividades",
+        "Bolsistas",
+        "Informática",
+        "menucard",
+        "Patrimônios",
         "SGPC"
     ]
 }
