Titulo dos cards de patrimonio centralizados

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,14 @@
     "cSpell.words": [
         "Atividades",
         "Bolsistas",
+        "Completa",
         "Informática",
+        "Lista",
+        "Listas",
+        "Localidades",
         "menucard",
         "Patrimônios",
-        "SGPC"
+        "SGPC",
+        "tipo"
     ]
 }
